--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tippyjs/react": "^4.2.6",
         "classnames": "^2.3.2",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.8.1",
@@ -19,7 +20,7 @@
         "react-router-dom": "^6.4.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4",
-        "zingmp3-api": "^1.0.10"
+        "zingmp3-api-full": "^1.0.14"
     },
     "devDependencies": {
         "babel-plugin-module-resolver": "^4.1.0",
