--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hls-player": "^3.0.7",
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
