--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "axios": "^0.27.2",
+        "chart.js": "^3.9.1",
         "classnames": "^2.3.2",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
         "react-hls-player": "^3.0.7",
         "react-redux": "^8.0.4",
