--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^0.27.2",
         "chart.js": "^3.9.1",
         "classnames": "^2.3.2",
+        "firebase": "^9.13.0",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
